fix: 作品詳細にブックマークしているかを追加する
